--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -1,6 +1,15 @@
 .container {
+	display: flex;
 	margin: 0 auto 2rem;
-	/* max-width: 960px; */
 	padding: 10px;
 	margin: 20px 40px;
+
+	#menu-wrapper {
+		width: 250px;
+	}
+
+	main {
+		width: 100%;
+    padding: 0 10px;
+	}
 }
