--- a/components/Menu/Menu.module.scss
+++ b/components/Menu/Menu.module.scss
@@ -1,8 +1,13 @@
 #menu {
+	h1 {
+		margin-bottom: 40px;
+    font-size: 28px;
+	}
+
 	nav {
 		display: flex;
 		flex-direction: column;
-		gap: 15px;
-		font-size: 16px;
+		gap: 25px;
+		font-size: 20px;
 	}
 }
