--- a/components/Menu/Menu.module.scss
+++ b/components/Menu/Menu.module.scss
@@ -1,4 +1,9 @@
 #menu {
+  /*
+  background-color: #282A35;
+  color: #FFF; */
+  
+  
 	h1 {
 		margin-bottom: 40px;
     font-size: 28px;
@@ -9,5 +14,6 @@
 		flex-direction: column;
 		gap: 25px;
 		font-size: 20px;
+    color: #3E5060;
 	}
 }
