--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,19 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #f1f1f1;
+  color: #393939;
+  height: 100%;
 }
 
 a {
   color: inherit;
+  font-weight: bold;
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 h1 {
@@ -19,12 +27,18 @@ h1 {
   box-sizing: border-box;
 }
 
+#__next {
+  height: inherit;
+}
+
+/*
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+
   body {
-    color: white;
-    background: #222;
+    color: #d6d6d6;
+    background: #22242A;
   }
-}
+} */
