Update menu links and type filter

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -1,19 +1,39 @@
-.container {
+#layout {
 	display: flex;
+  flex-direction: column;
 	background-color: #FFF;
 	width: 1400px;
 	margin: 0 auto;
 	padding-top: 20px;
-	height: inherit;
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
-	#menu-wrapper {
-		padding: 0 20px;
-		width: 250px;
-	}
+  #layout-content {
+    display: flex;
 
-	main {
-		width: 100%;
-    padding: 0 10px;
-	}
+    #menu-wrapper {
+      padding: 0 20px;
+      width: 250px;
+    }
+  
+    main {
+      width: 100%;
+      padding: 0 10px;
+      min-height: 1000px;
+    }
+  }
+
+  footer {
+    text-align: center;
+    margin-top: 40px;
+    height: 100%;
+    font-size: 16px;
+    font-weight: bolder;
+    padding-bottom: 20px;
+
+    #footer-divider {
+      border-top: 5px solid #DCDCDC;
+      padding-bottom: 20px;
+      margin: 0 20px;
+    }
+  }
 }
