--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,16 +2,18 @@ html,
 body {
   padding: 0;
   margin: 0;
+  /*
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #f1f1f1;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+  font-family: "Raleway", sans-serif;
+  background-color: $bg-color;
   color: #393939;
   height: 100%;
 }
 
 a {
-  color: inherit;
-  font-weight: bold;
+  color: $link-colour;
+  font-weight: bolder;
   text-decoration: none;
 }
 
