--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,7 +8,7 @@ body {
   font-family: "Raleway", sans-serif;
   background-color: $bg-color;
   color: #393939;
-  height: 100%;
+  height: auto;
 }
 
 a {
