Mobile view for list and view pages

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -45,7 +45,7 @@
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: $mobile-width) {
   #layout {
     #layout-content {
       display: flex;
@@ -61,4 +61,3 @@
     }
   }
 }
-
