--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -5,7 +5,7 @@
 	max-width: 1400px;
   height: 100%;
 	margin: 0 auto;
-	padding-top: 20px;
+	padding: 20px 0 3px;
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
   #layout-content {
