--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -5,10 +5,10 @@
 	max-width: 1400px;
   height: 100%;
 	margin: 0 auto;
-	padding: 20px 0 3px;
-	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  padding: 0 20px;
 
   #layout-content {
+    /*
     display: flex;
     flex-direction: row;
 
@@ -20,11 +20,10 @@
 
     #menu-mobile-wrapper {
       display: none;
-    }
+    } */
   
     main {
       width: 100%;
-      padding: 0 10px;
       min-height: 1000px;
     }
   }
@@ -48,6 +47,7 @@
 @media (max-width: $mobile-width) {
   #layout {
     #layout-content {
+      /*
       display: flex;
       flex-direction: column;
   
@@ -57,7 +57,7 @@
     
       #menu-mobile-wrapper {
         display: block;
-      }
+      } */
     }
   }
 }
