--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,5 +1,7 @@
 $base-color: #c6538c;
-$bg-color: #f1f1f1;
-$link-colour: #1976D2;
+$bg-color: #FFF;
+$link-colour: #363636;
+$btn-color: #363636;
+$btn-hover-color: #48494B;
 $mobile-width: 1000px;
 $list-onecolumn-width: 730px;
