--- a/components/Project/ProjectList.module.scss
+++ b/components/Project/ProjectList.module.scss
@@ -1,5 +1,9 @@
 #project-list {
+  #project-list-header {
+    text-align: center;
+  }
+
   p {
-    margin: 0 0 15px;
+    margin-bottom: 35px;
   }
 }
