--- a/components/Prototype/PrototypeList.module.scss
+++ b/components/Prototype/PrototypeList.module.scss
@@ -1,5 +1,9 @@
 #prototype-list {
+  #prototype-list-header {
+    text-align: center;
+  }
+
   p {
-    margin: 0 0 15px;
+    margin-bottom: 35px;
   }
 }
