--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,11 +1,32 @@
 #about {
+  h1, h2 {
+    text-align: center;
+  }
+
+  h2 {
+    margin-top: 40px;
+  }
+
   #about-techstack-list {
     display: flex;
-    flex-direction: row;
-    margin-left: 0;
+    flex-direction: column;
+    width: 700px;
+    margin: 0 auto;
 
     .about-techstack {
+      display: flex;
       margin-right: 100px;
+
+      .about-techstack-items {
+        display: flex;
+        align-items: center;
+        margin-left: 20px;
+        gap: 10px;
+      }
+
+      .about-techstack-iconwrapper {
+        min-width: 100px;
+      }
 
       .about-techstack-iconwrapper,
       .about-techstack-icon {
