--- a/components/Portfolio/PortfolioItem/PortfolioItem.module.scss
+++ b/components/Portfolio/PortfolioItem/PortfolioItem.module.scss
@@ -25,10 +25,8 @@
   }
 }
 
-@media (max-width: $mobile-width) {
-
-}
-
-@media (max-width: $list-onecolumn-width) {
-
+@media (max-width: 700px) {
+  .portfolio-item {
+    display: none;
+  }
 }
