--- a/components/Portfolio/PortfolioMobileItem/PortfolioMobileItem.module.scss
+++ b/components/Portfolio/PortfolioMobileItem/PortfolioMobileItem.module.scss
@@ -7,7 +7,7 @@
   width: auto;
 }
 
-@media (max-width: 700px) {
+@media (max-width: $mobile-width) {
   .portfolio-mobile-item {
     display: block;
   }
