--- a/styles/about.scss
+++ b/styles/about.scss
@@ -9,17 +9,20 @@
 
   #about-techstack-list {
     display: flex;
+    align-content: center;
     flex-direction: column;
-    width: 700px;
-    margin: 0 auto;
+    flex-wrap: wrap;
 
     .about-techstack {
       display: flex;
-      margin-right: 100px;
+      flex-direction: row;
+      margin-bottom: 10px;
 
       .about-techstack-items {
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
+        justify-content: center;
         margin-left: 20px;
         gap: 10px;
       }
@@ -56,15 +59,13 @@
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: $mobile-width) {
   #about {
     #about-techstack-list {
-      display: flex;
-      flex-direction: column;
-      margin-left: 20px;
-
       .about-techstack {
-        margin-right: 0;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 40px;
       }
     }
   }
