--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,7 +1,8 @@
 $base-color: #c6538c;
 $bg-color: #FFF;
+$header-color: #363636;
 $link-colour: #363636;
 $btn-color: #363636;
 $btn-hover-color: #48494B;
-$mobile-width: 1000px;
+$mobile-width: 700px;
 $list-onecolumn-width: 730px;
