Fix header links

--- a/styles/about.scss
+++ b/styles/about.scss
@@ -53,7 +53,8 @@
         font-size: 18px;
   
         li {
-          margin-bottom: 20px;      }
+          margin-bottom: 20px;
+        }
       }
     }
   }
