--- a/components/Portfolio/PortfolioItem/PortfolioItem.module.scss
+++ b/components/Portfolio/PortfolioItem/PortfolioItem.module.scss
@@ -3,9 +3,10 @@
   gap: 60px;
 
   img {
-    border-radius: 15px;
+    border-radius: 4px;
     width: 600px;
     height: 350px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 20%);
   }
 
   .portfolio-item-text {
