--- a/styles/about.scss
+++ b/styles/about.scss
@@ -18,9 +18,7 @@
 @media (max-width: $mobile-width) {
   #about {
     #about-techstack-list {
-      .about-techstack {
-        flex-direction: column;
-        align-items: center;
+      #about-techstack-msg {
         margin-bottom: 40px;
       }
     }
