Fix Type label CSS

--- a/components/Portfolio/PortfolioItem/PortfolioItem.module.scss
+++ b/components/Portfolio/PortfolioItem/PortfolioItem.module.scss
@@ -19,6 +19,10 @@
       margin-top: 0;
     }
 
+    .MuiChip-root {
+      max-width: 80px;
+    }
+
     button {
       width: 140px;
       height: 45px;
