--- a/styles/about.scss
+++ b/styles/about.scss
@@ -7,6 +7,11 @@
     margin-top: 40px;
   }
 
+  #about-text {
+    display: flex;
+    justify-content: center;
+  }
+
   #about-techstack-list {
     display: flex;
     align-content: center;
