--- a/components/Portfolio/PortfolioItem/PortfolioItem.module.scss
+++ b/components/Portfolio/PortfolioItem/PortfolioItem.module.scss
@@ -1,43 +1,49 @@
-.portfolio-item {
-  display: flex;
-  gap: 60px;
+.portfolio-item-wrapper {
+  width: 100%;
 
-  img {
-    border-radius: 4px;
-    width: 600px;
-    height: 350px;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 20%);
-  }
-
-  .portfolio-item-text {
+  .portfolio-item {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 50%;
-
-    .portfolio-item-title {
+    gap: 60px;
+  
+    img {
+      border-radius: 4px;
+      width: 600px;
+      height: 350px;
+      box-shadow: 0 3px 10px rgb(0 0 0 / 20%);
+    }
+  
+    .portfolio-item-text {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
+      justify-content: center;
+      max-width: 50%;
+  
+      .portfolio-item-title {
+        display: flex;
+        flex-direction: row;
+      
+        h2 {
+          margin-top: 0;
+        }
     
-      h2 {
-        margin-top: 0;
+        .portfolio-item-type {
+          margin-left: 12px;
+          max-width: 80px;
+        }
       }
   
-      .portfolio-item-type {
-        margin-left: 12px;
-        max-width: 80px;
+      button {
+        width: 140px;
+        height: 45px;
       }
-    }
-
-    button {
-      width: 140px;
-      height: 45px;
     }
   }
 }
 
 @media (max-width: $mobile-width) {
-  .portfolio-item {
-    display: none;
+  .portfolio-item-wrapper {
+    .portfolio-item {
+      display: none;
+    }
   }
 }
