--- a/components/Portfolio/PortfolioItem/PortfolioItem.module.scss
+++ b/components/Portfolio/PortfolioItem/PortfolioItem.module.scss
@@ -8,6 +8,7 @@
     img {
       border-radius: 4px;
       width: 600px;
+      min-width: 600px;
       height: 350px;
       box-shadow: 0 3px 10px rgb(0 0 0 / 20%);
     }
@@ -35,6 +36,18 @@
       button {
         width: 140px;
         height: 45px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1050px) {
+  .portfolio-item-wrapper {
+    .portfolio-item {
+      img {
+        width: 500px;
+        min-width: 500px;
+        height: 320px;
       }
     }
   }
