--- a/components/Portfolio/PortfolioDialog/PortfolioDialog.module.scss
+++ b/components/Portfolio/PortfolioDialog/PortfolioDialog.module.scss
@@ -36,6 +36,10 @@
     margin-bottom: 40px;
   }
 
+  .MuiLink-root {
+    text-decoration: none;
+  }
+
   button {
     background-color: $btn-color;
     color: #FFF;
