Link button fix

--- a/components/Portfolio/PortfolioDialog/PortfolioDialog.module.scss
+++ b/components/Portfolio/PortfolioDialog/PortfolioDialog.module.scss
@@ -37,12 +37,13 @@
   }
 
   .portfolio-dialog-btnlink:hover {
-    text-decoration: none;
-  }
-
-  button {
-    background-color: $btn-color;
-    color: #FFF;
     width: 140px;
+    text-decoration: none;
+
+    button {
+      background-color: $btn-color;
+      color: #FFF;
+      width: inherit;
+    }
   }
 }
