--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -13,7 +14,7 @@ html, body {
 
 #main {
   width: 1440px;
-  margin: 80px auto 40px;
+  margin: 0 auto 40px;
   padding: 0 40px;
 }
 
